--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html oncontextmenu="return false" lang="en">
+<!-- oncontextmenu="return false" -->
+<html  lang="en">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/Tanishq_icon.png" />
