--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- oncontextmenu="return false" -->
-<html lang="en">
+<html oncontextmenu="return false" lang="en">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/Tanishq_icon.png" />
